[gd_scene load_steps=19 format=3 uid="uid://yl0ax47os7of"]

[ext_resource type="Script" path="res://Scenes/Guis/Hud/Hud.gd" id="1_1krw8"]
[ext_resource type="Texture2D" uid="uid://dkcuxnecprxav" path="res://Assets/Hud/Hud.png" id="2_iaoah"]
[ext_resource type="Texture2D" uid="uid://d3kgs25cesn72" path="res://Assets/Hud/HealthBar.png" id="3_7a0nq"]
[ext_resource type="Texture2D" uid="uid://cu8bhwxbyq1r8" path="res://Assets/Hud/ChargeBar.png" id="4_g8jse"]
[ext_resource type="Shader" path="res://Objects/Shaders/Noise.gdshader" id="5_73te6"]
[ext_resource type="Texture2D" uid="uid://csxw0kirvkbyc" path="res://Assets/Hud/DefenseLogo.png" id="5_ejyfi"]
[ext_resource type="Texture2D" uid="uid://cangu2c66qlw6" path="res://Assets/Hud/SpeedLogo.png" id="6_7lb07"]
[ext_resource type="Texture2D" uid="uid://caol04j7qpf81" path="res://Assets/Hud/AttackDamageLogo.png" id="7_lqdx0"]
[ext_resource type="Texture2D" uid="uid://3aqlslbi6gtd" path="res://Assets/Hud/AttackSpeedLogo.png" id="8_r8n1q"]
[ext_resource type="Texture2D" uid="uid://csdfb5eedneg1" path="res://Assets/Xelu_Free_Controller&Key_Prompts/Keyboard & Mouse/Dark/E_Key_Dark.png" id="9_8r6nm"]
[ext_resource type="Script" path="res://Scenes/Guis/Hud/PickupLabel.gd" id="9_bj2is"]

[sub_resource type="Theme" id="Theme_4jci3"]
Label/font_sizes/font_size = 30

[sub_resource type="Gradient" id="Gradient_pd4xv"]
offsets = PackedFloat32Array(0, 0.273743, 1)
colors = PackedColorArray(0.529067, 0.529067, 0.529066, 1, 0.691357, 0.691357, 0.691357, 1, 1, 1, 1, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_3nl45"]
frequency = 0.1
fractal_octaves = 1
metadata/_preview_in_3d_space_ = true

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_qnoyf"]
width = 38
height = 38
generate_mipmaps = false
seamless = true
seamless_blend_skirt = 1.0
color_ramp = SubResource("Gradient_pd4xv")
noise = SubResource("FastNoiseLite_3nl45")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_j7ya8"]
shader = ExtResource("5_73te6")
shader_parameter/colour = Color(0.184314, 0.223529, 0.498039, 1)
shader_parameter/modulate = Color(0.168627, 0.168627, 0.168627, 1)
shader_parameter/move_direction = Vector3(-1, 1, 0)
shader_parameter/speed = 0.125
shader_parameter/noise = SubResource("NoiseTexture2D_qnoyf")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vrms1"]
draw_center = false
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.0823529, 0.0862745, 0.352941, 1)
border_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nlsv6"]

[node name="Hud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1krw8")

[node name="Margin" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 25.0
offset_top = 25.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_4jci3")
metadata/_edit_lock_ = true

[node name="HudBar" type="TextureRect" parent="Margin"]
layout_mode = 0
offset_right = 400.0
offset_bottom = 188.0
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_iaoah")
stretch_mode = 4

[node name="HealthBar" type="TextureProgressBar" parent="Margin/HudBar"]
layout_mode = 0
offset_left = 142.429
offset_top = 45.5
offset_right = 484.429
offset_bottom = 69.5
value = 100.0
texture_progress = ExtResource("3_7a0nq")

[node name="ChargeBar" type="TextureProgressBar" parent="Margin/HudBar"]
layout_mode = 0
offset_left = 23.0
offset_top = 130.0
offset_right = 484.0
offset_bottom = 154.0
value = 100.0
texture_progress = ExtResource("4_g8jse")

[node name="LevelPanel" type="TextureRect" parent="Margin/HudBar"]
texture_repeat = 2
material = SubResource("ShaderMaterial_j7ya8")
layout_mode = 0
offset_left = 33.0
offset_top = 33.0
offset_right = 109.0
offset_bottom = 109.0
texture = SubResource("NoiseTexture2D_qnoyf")

[node name="Panel" type="Panel" parent="Margin/HudBar/LevelPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_vrms1")

[node name="Label" type="Label" parent="Margin/HudBar/LevelPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Margin/HudBar"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 0.999
anchor_bottom = 1.0
offset_left = 8.33334
offset_top = 10.333
offset_right = -0.171692
offset_bottom = 161.333
metadata/_edit_lock_ = true

[node name="GridContainer" type="GridContainer" parent="Margin/HudBar/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 33
columns = 4

[node name="DefenseIcon" type="TextureRect" parent="Margin/HudBar/VBoxContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("5_ejyfi")
stretch_mode = 5

[node name="SpeedIcon" type="TextureRect" parent="Margin/HudBar/VBoxContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("6_7lb07")
stretch_mode = 5

[node name="AttackDamageIcon" type="TextureRect" parent="Margin/HudBar/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(114, 96)
layout_mode = 2
texture = ExtResource("7_lqdx0")
expand_mode = 1
stretch_mode = 5

[node name="AttackSpeedIcon" type="TextureRect" parent="Margin/HudBar/VBoxContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("8_r8n1q")
stretch_mode = 5

[node name="Defense" type="Label" parent="Margin/HudBar/VBoxContainer/GridContainer"]
layout_mode = 2
text = "1.0%"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Speed" type="Label" parent="Margin/HudBar/VBoxContainer/GridContainer"]
layout_mode = 2
text = "1.0%"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AttackDamage" type="Label" parent="Margin/HudBar/VBoxContainer/GridContainer"]
layout_mode = 2
text = "1.0%"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AttackSpeed" type="Label" parent="Margin/HudBar/VBoxContainer/GridContainer"]
layout_mode = 2
text = "1.0%"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InteractLabel" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("9_8r6nm")
expand_mode = 1
script = ExtResource("9_bj2is")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nlsv6")
}
